--- a/settings.env
+++ b/settings.env
@@ -1,1 +1,4 @@
-
+COINGECKO_API_URL=https://api.coingecko.com/api/v3/simple/price
+SUPPORTED_COINS=bitcoin,ethereum,litecoin,bitcoin-cash,usdt,matic
+SUPPORTED_FIATS=usd
+UPDATE_INTERVAL=5
